# autocut

./: .gitignore  LICENSE  README.md  env.js  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  setup.py  tsconfig.json
imaginaition/: __init__.py  cut.py
src/: cut.py  help.py  imaginaition_logging.py  index.js  index.ts  logging.ts  main.py  subtitle.py  test.js
src/apps/: cut.ts
src/apps/cut/: index.ts
src/electron/: package-lock.json  package.json  tsconfig.json
src/electron/src/: index.ts
src/imaginaition/: __main__.py  help.py
src/options/: help.ts
src/setup/: randomUpgrade.js  setup.js
src/subtitle/: jsonToSrt.js  subtitleVideo.js  testing.json
src/ui/: package-lock.json  package.json  tailwind.config.js
src/ui/src/pages/: _document.tsx  index.tsx
src/ui/src/styles/: globals.css
src/utils/: concatVideo.js  cutVideo.js  getFilenames.js  getvideofiles.ts  gradients.ts  progressbar.ts
