[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imaginaition"
version = "0.1.2"
description = ""
authors = [{ name = "jtpotato" }]
license = { text = "GPL-3.0-or-later", file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "auto-editor",
    "rgbprint",
]

[project.scripts]
imaginaition = "imaginaition:main"

[project.urls]
homepage = "https://github.com/jtpotato/imaginaition"

